# etyOS

./: README.md
nirvana/: .gitignore  README.md  package-lock.json  package.json
nirvana/applets/: registry.json
nirvana/applets/uikit-showcase/: Cargo.toml
nirvana/applets/uikit-showcase/src/: main.rs
nirvana/crates/nirvana-protocol/: Cargo.toml
nirvana/crates/nirvana-protocol/src/: lib.rs
nirvana/scripts/: dev.sh  npm.sh  run-electron.sh
nirvana/src/main/: main.js  preload.js  protocol-validation.js  rust-applets.js
nirvana/src/renderer/: index.html  main.js  styles.css
nirvana/src/renderer/applets/component-showcase/: index.js
nirvana/src/renderer/runtime/: applet-registry.js  nirvana-runtime.js  schema-renderer.js
nirvana/src/renderer/ui-kit/: components.js
yawc/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
yawc/.github/: pull_request_template.md
yawc/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
yawc/.github/workflows/: rust.yml
yawc/packaging/: debian-runtime-packages.txt  yawc-dmabuf-probe.desktop.in  yawc.desktop.in
yawc/scripts/: bootstrap-standalone-deps.sh  bootstrap-tty-deps.sh  build-standalone.sh  build-tty.sh  build.sh  debug-gpu-env.sh  debug-two-apps.sh  default-terminal.sh  dev-update-session.sh  install-session.sh  launch-standalone-binary.sh  launch-tty-binary.sh  pkg-config-local.sh  run-standalone-direct.sh  run-standalone-session.sh  run-test.sh  run-tty-direct.sh  run-tty-session.sh  run-tty.sh  run.sh  rust-env.sh  start-standalone.sh  start-tty.sh  uninstall-session.sh  yawc-dmabuf-probe-session.sh  yawc-session.sh
yawc/src/: config.rs  cursor.rs  focus.rs  input.rs  main.rs  render.rs  screencopy.rs  state.rs  window.rs
yawc/src/backend/: mod.rs  tty_udev.rs  winit.rs
yawc/src/grabs/: mod.rs  move_grab.rs  resize_grab.rs  x11_resize_grab.rs
yawc/src/shell/: compositor.rs  decoration.rs  mod.rs  seat.rs  xdg.rs  xwayland.rs
